--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,13 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nazwa aplikacji", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Motocykle", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Strona główna", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Informacje", "About", "Home")</li>
-                    <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Zaloguj", "Zaloguj", "Home")</li>
+                    <li>@Html.ActionLink("Rejestracja", "Rejestracja", "Home")</li>
+                    <li>@Html.ActionLink("ListMotocykli", "ListaMotocykli", "Home")</li>
+                    <li>@Html.ActionLink("Transakcje", "Transakcje", "Home")</li>
                 </ul>
             </div>
         </div>
